# Genesis

./: CMakeLists.txt  build.bat
client/: Genesis.cpp  Genesis.h  Main.cpp
lib/olc/: olcPixelGameEngine.h
server/: Main.cpp
shared/math/: vec2.h
